--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Git is B ditributed version control system.
 Git is free software.
 Git is add
+Git has a mutable index called stage.
+Git tracks changes.
