--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Git is B ditributed version control system.
 Git is free software.
 Git is add
 Git has a mutable index called stage.
-Git tracks changes.
+Git tracks changes of files.
